fixed alignment, added block collapse

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@ body,html {
     box-sizing: border-box;
 }
 .App {
-  text-align: center;
+  display: grid;
   margin: 0;
   padding: 0;
   background-color: #1E1E1E;
   box-sizing: border-box;
   min-height: 100vh;
+  min-width: 100vw;
 }
 
 
